--- a/src/main/resources/templates/abc/def.html
+++ b/src/main/resources/templates/abc/def.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Title</title>
 </head>
 <body>
-    <p> this is aaa page</p>
+    <p>abc / def</p>
 </body>
 </html>
