--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--<div class="footer" th:fragment="footer">-->
+<div class="footer" th:fragment="footer">
 <div>
     <footer class="page-footer font-small cyan darken-3">
         <div class="footer-copyright text-center py-3">
-            Header Test
+            Footer test
         </div>
     </footer>
 </div>
