--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,8 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <!--      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">-->
 
-<!--<div th:fragment="header">-->
-<div>
+<div th:fragment="header">
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
